# backend/services/paste/docs/swagger.json
@@ -9,6 +9,28 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/me/pastes": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pastes"
+                ],
+                "summary": "获取我的代码片段列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.PasteResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/pastes": {
             "post": {
                 "consumes": [
@@ -54,7 +76,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "短链接ID",
+                        "description": "片段ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -68,11 +90,8 @@
                         }
                     }
                 }
-            }
-        },
-        "/users/login": {
-            "post": {
-                "description": "用户登录接口",
+            },
+            "put": {
                 "consumes": [
                     "application/json"
                 ],
@@ -80,17 +99,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "pastes"
                 ],
-                "summary": "用户登录",
+                "summary": "更新代码片段",
                 "parameters": [
                     {
-                        "description": "登录信息",
+                        "type": "string",
+                        "description": "片段ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "请求参数",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.LoginRequest"
+                            "$ref": "#/definitions/model.UpdatePasteRequest"
                         }
                     }
                 ],
@@ -98,41 +124,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.LoginResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/register": {
-            "post": {
-                "description": "用户注册接口",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "用户注册",
-                "parameters": [
-                    {
-                        "description": "注册信息",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.RegisterRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.RegisterResponse"
+                            "$ref": "#/definitions/model.PasteResponse"
                         }
                     }
                 }
@@ -144,7 +136,8 @@
             "type": "object",
             "required": [
                 "content",
-                "language"
+                "language",
+                "title"
             ],
             "properties": {
                 "content": {
@@ -152,38 +145,11 @@
                 },
                 "language": {
                     "type": "string"
-                }
-            }
-        },
-        "model.LoginRequest": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
+                },
+                "title": {
                     "type": "string"
                 },
-                "username": {
-                    "description": "登录时不需要太严格，只要求必填即可",
-                    "type": "string"
-                }
-            }
-        },
-        "model.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                },
-                "username": {
+                "visibility": {
                     "type": "string"
                 }
             }
@@ -197,49 +163,47 @@
                 "created_at": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "language": {
                     "type": "string"
                 },
-                "short_link": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.RegisterRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "email": {
-                    "description": "Email: 邮箱",
-                    "type": "string"
-                },
-                "password": {
-                    "description": "Password: 密码",
-                    "type": "string",
-                    "minLength": 8
-                },
-                "username": {
-                    "description": "Username: 用户名\nrequired: 必填字段\nmin=3: 最少3个字符\nmax=20: 最多20个字符\nalphanum: 只能包含字母和数字（不能有特殊字符、空格）",
-                    "type": "string",
-                    "maxLength": 20,
-                    "minLength": 3
-                }
-            }
-        },
-        "model.RegisterResponse": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "user_id": {
+                "owner_id": {
                     "type": "integer"
                 },
-                "username": {
+                "short_link": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "visibility": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UpdatePasteRequest": {
+            "type": "object",
+            "required": [
+                "content",
+                "language",
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "visibility": {
                     "type": "string"
                 }
             }
