# backend/services/paste/model/request.go
@@ -1,6 +1,15 @@
 package model
 
 type CreatePasteRequest struct {
-	Content  string `json:"content" binding:"required"`
-	Language string `json:"language" binding:"required"`
+	Title      string `json:"title" binding:"required"`
+	Content    string `json:"content" binding:"required"`
+	Language   string `json:"language" binding:"required"`
+	Visibility string `json:"visibility"`
+}
+
+type UpdatePasteRequest struct {
+	Title      string `json:"title" binding:"required"`
+	Content    string `json:"content" binding:"required"`
+	Language   string `json:"language" binding:"required"`
+	Visibility string `json:"visibility"`
 }
