# backend/services/paste/model/response.go
@@ -1,8 +1,13 @@
 package model
 
 type PasteResponse struct {
-	ShortLink string `json:"short_link"`
-	Content   string `json:"content"`
-	Language  string `json:"language"`
-	CreatedAt string `json:"created_at"`
+	ID         int64  `json:"id"`
+	OwnerID    int64  `json:"owner_id"`
+	Title      string `json:"title"`
+	ShortLink  string `json:"short_link,omitempty"`
+	Content    string `json:"content"`
+	Language   string `json:"language"`
+	Visibility string `json:"visibility"`
+	CreatedAt  string `json:"created_at"`
+	UpdatedAt  string `json:"updated_at"`
 }
